# web_game

./: .env  .gitignore  .gitognore  Makefile  alembic.ini  main.py  pyproject.toml  readme.md
alembic/: env.py
alembic/versions/: 356779628451_initial_migration.py  80b96e602f0d_initial_migration.py  a25901690fb6_ajouter_race_tablee.py  ad56fec4a714_ajouter_race_tablee.py  c40857d02497_global.py
front_end/: compte.html  compte.js  create_user.html  inventory.html  inventory.js  login.html  login.js  register.html  register.js  register_user.js
front_end/static/assets/: style.css
game/: main.py  obstacle.py
game/categories/: classe.py  race.py  stats.py
game/equipments/: bag.py  equipment.py  item.py
game/jeu/: case.py  plateau.py  quest.py
game/joueurs/: joueur.py
game/personnages/: avatar.py  hero.py  mobs.py
src/app/endpoints/: category_endpoint.py  compte_endpoints.py  inventaire_endpoint.py  objet_endpoint.py  user_endpoint.py
src/app/models/: __init__.py  category_model.py  compte_model.py  equipement_model.py  inventaire_model.py  objet_model.py  race_model.py  user_model.py
src/app/repositories/: category_repository.py  compte_repository.py  inventaire_repoitory.py  objet_repository.py  user_repository.py
src/app/schemas/: category_schema.py  compte_schema.py  inventaire_schema.py  objet_schema.py  user_schema.py
src/app/services/: category_service.py  compte_service.py  inventaire_service.py  objet_service.py  user_service.py
src/config/db/: config.py  database.py
src/config/sécurité/: securité.py
