[tool.poetry]
name = "game-api"
version = "0.1.0"
description = ""
authors = ["dahdouh ahmed"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sqlmodel = "^0.0.22"
psycopg2 = "^2.9.10"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.17"
jwt = "^1.3.1"
passlib = "^1.7.4"
bcrypt = "^4.2.1"
pyjwt = "^2.10.0"
alembic = "^1.14.0"
starlette = "^0.41.3"
uvicorn = "^0.34.0"
fastapi = "^0.115.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
